--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -26,6 +26,9 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:fadeScrollbars="false"
+        android:scrollbars="none"></ListView>
 
 </LinearLayout>
